# takt-sdd

./: .gitignore  AGENTS.md  CC-SDD-CLAUDE.md  CC-SDD-CODEX.md  CHANGELOG.md  CLAUDE.md  COMMON.md  README.ja.md  README.md  TAKT.md  install.sh  mise.toml  package-lock.json  package.json  skills-lock.json
.codex/: config.toml  hooks.json  mise.toml
.codex-corporate/: config.toml
.serena/: .gitignore  project.yml
.takt/: config.yaml
cli/: asset-resolution.mjs  command-catalog.mjs  eject-command.mjs  init-adapter.mjs  main.mjs  (+1 more)
tests/qcount/: Cargo.toml  opsx-apply.sh  opsx-explore.sh  opsx-propose.sh  run-takt.sh
tests/qcount/.serena/: project.yml
tests/qcount/openspec/changes/qcount-design/: .openspec.yaml  design.md  proposal.md  tasks.md
tests/qcount/openspec/explorations/: qcount-design.md
tests/qcount/src/: aggregator.rs  cli.rs  counter.rs  language.rs  main.rs  walker.rs
tests/qcount/src/reporter/: json.rs  mod.rs  table.rs
tests/qcount/tests/integration/: count_test.rs
tests/qcount/tests/integration/fixtures/: sample.js  sample.py  sample.rs
tests/qfind/: Cargo.toml  test.sh
tests/qfind/.kiro/specs/qfind/: design.md  gap-analysis.md  requirements.md  research.md  tasks.md
tests/qfind/.serena/: project.yml
tests/qfind/src/: cli_input_adapter.rs  content_pattern.rs  depth_limit.rs  file_name_pattern.rs  lib.rs  main.rs  parallel_path_scanner.rs  path_scanner_port.rs  qfind_error.rs  scan_issue.rs  scan_snapshot.rs  search_command.rs
tests/qfind/tests/: cli_input_contract.rs  content_pattern_contract.rs  file_name_pattern_contract.rs
(+630 files in other folders)
