[package]
name = "qcount"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qcount"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
rayon = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
anyhow = "1"

[[test]]
name = "count_test"
path = "tests/integration/count_test.rs"
