[package]
name = "qfind"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
globset = "0.4.15"
ignore = "0.4.23"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.17.1"
